--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -2,6 +2,8 @@
   display: flex;
   gap: 10px;
   padding: 20px;
+  border-bottom: 2px solid rgb(171, 170, 170);
+  margin-bottom: 20px;
 }
 
 .headerLink {
